--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    99 bombs
+		    Hold any key and click to mark buttons
 	    </footer>
 	</body>
 </html>
