--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Hold any key and click to mark buttons
+		    Hold any key and click to mark buttons.
 		    Mark all bombs to win
 	    </footer>
 	</body>
