--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		    </section>
 	    <footer>
 		    Hold any key and click to mark buttons.
-		    Mark all bombs to win...
+		    Mark all bombs to win...!
 	    </footer>
 	</body>
 </html>
