--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	    <footer>
 		    Hold any key and click to mark buttons.
 		    Mark all bombs to win.
+		    100 bombs!
 	    </footer>
 	</body>
 </html>
